Prevent overflowing code blocks

--- a/src/styles/Docs.module.css
+++ b/src/styles/Docs.module.css
@@ -14,6 +14,7 @@
   background-color: lightgray;
   padding: 1em;
   border-radius: var(--radius);
+  white-space: pre-wrap;
 }
 
 .docsArticle > p > code {
